# space-exploration-stargate

./: .gitignore  README.md  pyproject.toml
src/stargate/: __init__.py  __main__.py  logic.py
